refactor: normalize locale handling